--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Gitaarstemmer</string>
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="menu_open">Open Menu</string>
+    <string name="menu_close">Close Menu</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
