opslagsysteem met json serialisatie

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="input_hint">Titel</string>
     <string name="geen_titel_waarschuwing">Geef eerst een titel in</string>
     <string name="succesful_save">Stemming is opgeslagen</string>
+    <!-- File repository-->
+    <string name="bestandsnaam">stemmingen.txt</string>
 
 </resources>
