--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <!-- Menu -->
     <string name="menu_open">Open menu</string>
     <string name="menu_close">Sluit menu</string>
+    <!-- Stemmer fragment -->
+    <string name="no_stemming_selected_message">Selecteer een stemming</string>
     <!-- Opgeslagen stemmingen fragment -->
     <string name="alert_title">Stemming Verwijderen</string>
     <string name="alert_message">Bent u zeker?</string>
